--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,13 @@
   margin: 0;
 }
 
+/* SEC 1:BODY STYLING */
+
 body {
   background-color: #d9dcd6;
 }
+
+/* SEC2 : NAV BAR AND HEADER STYLING*/
 
 .header {
   padding: 20px;
@@ -118,7 +122,7 @@ p {
   max-width: 150px;
 }
 
-/* BEST PRACTICES: Grouping the  following h2 header division article from section as they have the same styling */
+/* BEST PRACTICES: Grouping the  following header division article from section as they have the same styling */
 
 .search-engine-optimization,
 .online-reputation-management,
@@ -131,22 +135,18 @@ p {
   color: #ffffff;
 }
 
+/* BEST PRACTICES: Grouping the  following h2 header image division article from section as they have the same img styling */
+
 .search-engine-optimization img,
 .online-reputation-management img,
 .social-media-marketing img {
   max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
+/* BEST PRACTICES: Grouping the  following h2 header division article from section as they have the same styling */
 
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
   margin-bottom: 20px;
   font-size: 36px;
